<resources>
    <string name="app_name">TripPlanner</string>
    <string name="action_settings">Settings</string>
    <string name="my_trips">My Trips</string>
    <string name="plan_new_trip">Plan New Trip</string>
    <string name="inspire_me">Inspire Me</string>
    <string name="where_do_you_plan_to_go">Where are do you plan to go?</string>
    <string name="clear_text">Clear</string>
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="add_place">Add a destination</string>
    <string name="where_are_you_starting_from">Where are you starting from?</string>
    <string name="next">"Next"</string>
    <string name="how_long_is_your_trip">"How long is your trip?"</string>
    <string name="what_is_your_budget">"What is your budget?</string>
    <string name="enter_number_of_days">"Enter # of days"</string>
    <string name="name_your_trip">"What is the name of your trip?"</string>
    <string name="create_trip">"Create Trip"</string>
    <string name="enter_trip_name">"Enter trip name"</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
</resources>
