<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/trip_plan_screen1">

    <include layout="@layout/app_bar"
        android:id="@+id/toolbar"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/how_long_is_your_trip"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:textSize="@dimen/abc_text_size_medium_material"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="Enter number of days"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_budget"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:textSize="@dimen/abc_text_size_medium_material"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"
            android:hint="Enter $ amount"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/firstNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_alignParentBottom="true"
            android:onClick="firstNext"/>
    </RelativeLayout>
</LinearLayout>